# rag-llm-demo

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
src/rag_demo/: config.py
src/rag_demo/adapters/document/: generic_loader.py  pdf_loader.py
src/rag_demo/adapters/embeddings/: ollama_embeddings.py
src/rag_demo/adapters/llm/: ollama_llm.py
src/rag_demo/adapters/vectorstore/: chroma_store.py
src/rag_demo/api/: app.py  routes.py  schemas.py
src/rag_demo/domain/: models.py  ports.py
src/rag_demo/services/: ingest_service.py  rag_service.py
src/rag_demo/templates/: index.html
